--- a/css/style.css
+++ b/css/style.css
@@ -1,20 +1,19 @@
 *{margin:0;padding:0;}
 body{font-family: "微软雅黑";}
 a{text-decoration: none;}
-.section1{background: url(../image/bj4-1.jpg);}
+.section1{background: url(../image/bj4-11.jpg) no-repeat;background-size:100% 100%;}
 .section1 h1{text-align: center; position: relative; margin-bottom: 50px;}
 .sec1p p{text-align: center;line-height: 30px;position: relative; }
 .secp1,.secp2,.secp3{top:400px;}
-.section2{background: url(../image/bj2.jpg) ;}
+.section2{background: url(../image/bj2.jpg) no-repeat;background-size:100% 100%;}
 .section2 p{text-align: left; }
 .section2 h1{font-size: 50px;position: relative;top: -25%;color: #fff;}
-.section3{ background: url(../image/bj3.jpg) no-repeat;}
-.section4{background: url(../image/bj1.jpg) no-repeat;}
-#head{position:fixed;top:0;left:0;width:100%;border-bottom: 1px solid #e8e8e8;background:rgba(0,0,0,.3);
-    padding:10px 20px;}
+.section3{background: url(../image/bj3.jpg) no-repeat;background-size:100% 100%;}
+.section4{background: url(../image/bj1.jpg) no-repeat;background-size:100% 100%;}
+#head{position:fixed;top:0;left:0;width:100%;border-bottom: 1px solid #e8e8e8;background:rgba(0,0,0,.3);padding:10px 20px;}
 .head-left{display: inline-block;font-size: 12px;cursor: pointer;}
 .head-left img{width: 40px;height: 40px;border-radius: 20px; float: left; margin-right:10px;  border:1px solid #fff; }
-.head-left img:hover{box-shadow: 0 0 20px orange ;}
+.head-left img:hover{box-shadow: 0 0 20px orange;}
 #head-tit{display: inline-block;text-align: center;line-height: 20px;font-weight: bold;color: #fff}
 .head-right{margin:10px;float: right;}
 .head-right li{float: left;margin-right:10px; padding: 3px 7px;list-style: none;}
@@ -39,36 +38,66 @@ a{text-decoration: none;}
 .sec3-pic1{float: left;}
 .sec3-pic2{float: right;}
 
-.sec4-pic{width:100%;position: relative;top:-4000px;overflow: hidden;left: 200px;color: #fff;}
-.section4 span{float: left;width:200px;height: 312px;border:3px solid #fff;border-radius: 20px;position: relative;padding:5px;}
+.sec4-pic{width:100%;position: relative;overflow: hidden;left: 400px;color: #fff;}
+.section4 span{float: left;width:250px;height: 320px;border:3px solid #fff;border-radius: 20px;position: relative;padding:5px;}
 .section4 p{line-height: 1.5em;color:#fff;}
 .sec4-list{padding-left:10px;line-height: 20px;opacity: 0;}
-.sec4-list li{color:#fff;padding: 15px 0 0 0;font-size: 15px;transform: scale(.9); }
+.sec4-list li{color:#fff;padding: 8px 0 0 0;font-size: 15px;transform: scale(.9); }
 .h-tit,.c-tit,.j-tit,.aj-tit{font-size: 25px;text-align: center;position: relative;top:100px;z-index: 2;}
-.section5{background:url(../image/section4.jpg) no-repeat;}
+.section5{background:url(../image/section4.jpg) no-repeat;background-size: 100% auto;}
 .section5 h1{text-align: center;position: relative;top:100px;}
 .demo{position: relative;left:10%;}
 .mydemo{width: 200px;height: 200px; float: left;margin-right:80px;list-style: none;color:#333;font-size: 22px;text-align: center;
     text-shadow: 10px 10px 10px #ccc;}
 .mydemo img{width:200px;height: 200px;border:2px solid #e8e8e8;border-radius: 10%;margin-bottom: 10px;position: relative;
     -webkit-transition:1s;}
-.section6{background:url(../image/section8.jpg) no-repeat;}
+.section6{background:url(../image/section8.jpg) no-repeat;background-size: 100% auto;}
 .sec6-p{width:800px;height: 200px;margin: 0 auto;border:2px solid #ccc;border-radius: 20px;padding: 20px;}
 .section6 h1{width: 150px;margin:150px auto -150px;}
 .sec6-p img{width:180px;height:200px;float: left;margin-right: 50px; }
 .section6 ul{text-align: left;font-size: 18px;line-height: 35px;color: #333;text-shadow: 10px 10px 10px #e8e8e8;float: left;
     list-style: none;}
-.section6 ul li:hover{color:#0965B8;cursor: pointer;}
 .section4 h1{text-align: center;color: #fff;position: relative;top: -10%;}
+.section6 ul li:hover{color:#0965B8;cursor: pointer;}
+.section6 ul li a.tel{color: #333;display: inline-block;width:100%;
+height:100%;}
+.section6 ul li a:hover{color:#0965B8;}
 .slide{position: relative;}
-.slide img{width: 30%;height: 30%;position:absolute;transform:scale(1);transition:1s all;box-shadow: 10px 10px 10px rgba(0,0,0,.3);}
+.slide img{height: 220px;position:absolute;transform:scale(1);transition:1s all;box-shadow: 10px 10px 10px rgba(0,0,0,.3);}
 .slide img:hover{z-index: 999;transform:scale(1.5);transition:1s all; }
 .slide .pic1{top: 20%;left: 5%;}
 .slide .pic2{top: 35%;left:13%; }
 .slide .pic3{top: 50%;left: 20%;}
 .slide-text{float: right;margin-right: 7%; line-height: 30px; }
 .addr{color:red;}
-
+/*字体扫光*/
+.blank_text{
+    position: relative;
+    width:200px;
+    border-radius: 10px;
+    margin:0 auto 10px;
+    color: red;
+    line-height: 1;
+    font-size: 25px;
+    text-align: center;
+    overflow: hidden;
+    font-family: "icomoon";
+  }
+.blank_text:after{
+    width: 300%;
+    height: 100%;
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    background: -webkit-gradient(linear, left top, right top, color-stop(0, rgba(15,20,40, 0.7)), color-stop(0.4, rgba(15,20,40, 0.7)), color-stop(0.5, rgba(15,20,40, 0)), color-stop(0.6, rgba(15,20,40, 0.7)), color-stop(1, rgba(15,20,40, 0.7)));
+     background: -webkit-gradient(linear, left top, right top, color-stop(0, rgba(15,20,40, 0.7)), color-stop(0.4, rgba(15,20,40, 0.7)), color-stop(0.5, rgba(15,20,40, 0)), color-stop(0.6, rgba(15,20,40, 0.7)), color-stop(1, rgba(15,20,40, 0.7)));
+    -webkit-animation: slide ease-in-out 2s infinite; 
+    -moz-animation: slide ease-in-out 2s infinite; 
+}
+@-webkit-keyframes slide{
+    0%{-webkit-transform:translateX(-66.666%);-moz-transform:translateX(-66.666%);}
+    100%{-webkit-transform:translateX(0);-moz-transform:translateX(0);}
 @media screen and (min-width: 370px) and (max-width: 768px) {
     .section1 h1 {
         text-align: center;
